--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Quid agis? — How are you?"></textarea>
         </div>
       </details>
 
-      <div class="footer small">Tiny Flashcards · one HTML file · no libraries</div>
+      <div class="footer small">Mr. Heise's flashcards for Telos · "Cada maestrillo cada librillo" </div>
     </main>
   </div>
 
