--- a/decks.html
+++ b/decks.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Deck Selector - Latin Flashcards</title>
+  <title>Deck Selector</title>
   <style>
     :root { --bg:#000; --fg:#fff; }
     *{ box-sizing:border-box }
@@ -91,7 +91,7 @@
   <a class="back-link" href="index.html">← Back</a>
   
   <div class="container">
-    <h1>Select a Deck</h1>
+    <h1>Dēlige tabulam</h1>
     <div id="deckList" class="deck-list">
       <div class="loading">Loading decks...</div>
     </div>
